--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!-- Header -->
     <div class="menu">
         <p>
-            <a href="/index.html"><img src="assets/images/Main-logo.png" width="150px" class="main_logo"></a>
+            <a href="./index.html"><img src="assets/images/Main-logo.png" width="150px" class="main_logo"></a>
         </p>
         <div>
-            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="/assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
-            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="/assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
-            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="/assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
+            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="./assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
+            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="./assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
+            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="./assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
         </div>
 
         <h1>Cats Prouductions</h1>
@@ -37,7 +37,7 @@
     <p>
         Mass Pan!
         <br>
-        <img src="assets/images/Title-logo.png" width=30% alt="Place holder">
+        <img src="./assets/images/Title-logo.png" width=30% alt="Place holder">
         <br>
         Platform game based on foods as the enemies, using the different chefs abilities to fight them!
         <br>
@@ -49,11 +49,11 @@
     <h2>Merch!</h2>
     <p>Check out our new merch of this beautiful game!</p>
     <div class="zoom-img">
-        <a href="/public/merch.html"><img src="assets/images/Title-logo.png" width="25%"></a>        
+        <a href="./public/merch.html"><img src="./assets/images/Title-logo.png" width="25%"></a>        
         
     </div>
     <div class="zoom-img">
-        <a href="/public/merch.html"><img src="assets/images/Title-logo.png" width="25%"></a>
+        <a href="./public/merch.html"><img src="./assets/images/Title-logo.png" width="25%"></a>
         </div>
 
     <!-- News and updates -->
@@ -61,7 +61,7 @@
     <H2>Still on early </H2>
     <p>This is one of the enemies:
         <br>
-        <a href="https://youtu.be/16uf_d1x3UA?si=HQoAM3ehYqNRFaHl" target="_blank"><img src="assets/images/Game-Characters/Zanahoria.gif" width="25%"></a>
+        <a href="https://youtu.be/16uf_d1x3UA?si=HQoAM3ehYqNRFaHl" target="_blank"><img src="./assets/images/Game-Characters/Zanahoria.gif" width="25%"></a>
         <br>
         Click on it to see its process
     </p>
