--- a/public/merch.html
+++ b/public/merch.html
@@ -15,9 +15,9 @@
             <a href="../index.html"><img src="../assets/images/Main-logo.png" width="150px" class="main_logo"></a>
         </p>
         <div>
-            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="/assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
-            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="/assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
-            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="/assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
+            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="../assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
+            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="../assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
+            <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="../assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
         </div>
 
         <h1>Cats Prouductions</h1>
@@ -29,6 +29,6 @@
 
     <!-- Site Merch Content -->
     <H1>This Site is Under Construction!</H1>
-    <a href="/index.html"><H2>Click here to go back.</H2></a>
+    <a href="../index.html"><H2>Click here to go back.</H2></a>
 </body>
 </html>
