--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="./index.html"><img src="assets/images/Main-logo.png" width="150px" class="main_logo"></a>
         </p>
         <div>
+            <!-- right menu -->
             <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="./assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
             <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="./assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
             <a href="https://www.youtube.com/@ElvisEntino" target="_blank"><img src="./assets/images/YouTube_logo.png" alt="youtube channel" width="50px"></a>
@@ -61,7 +62,10 @@
     <H2>Still on early </H2>
     <p>This is one of the enemies:
         <br>
-        <a href="https://youtu.be/16uf_d1x3UA?si=HQoAM3ehYqNRFaHl" target="_blank"><img src="./assets/images/Game-Characters/Zanahoria.gif" width="25%"></a>
+        <a href="https://youtu.be/16uf_d1x3UA?si=HQoAM3ehYqNRFaHl" target="_blank"><img src="./assets/images/Game-Characters/Zanahoria.gif" width="210px"></a>
+        <a href="https://youtu.be/16uf_d1x3UA?si=HQoAM3ehYqNRFaHl" target="_blank"><img src="./assets/images/Game-Characters/Cucumber_gif.gif" width="210px"></a>
+
+
         <br>
         Click on it to see its process
     </p>
