--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <H2>Still on early </H2>
     <p>This is one of the enemies:
         <br>
-        <a href="https://youtu.be/16uf_d1x3UA?si=HQoAM3ehYqNRFaHl" target="_blank"><img src="./assets/images/Game-Characters/Carrot_gif.gif" width="210px"></a>
-        <a href="https://youtu.be/16uf_d1x3UA?si=HQoAM3ehYqNRFaHl" target="_blank"><img src="./assets/images/Game-Characters/Cucumber_gif.gif" width="210px"></a>
+        <a href="https://youtu.be/16uf_d1x3UA?si=HQoAM3ehYqNRFaHl" target="_blank"><img src="./assets/images/Game-Characters/Carrot_gif.gif" class="sprites"></a>
+        <a href="https://youtu.be/16uf_d1x3UA?si=HQoAM3ehYqNRFaHl" target="_blank"><img src="./assets/images/Game-Characters/Cucumber_gif.gif" class="sprites"></a>
 
 
         <br>
